# ServiceElasticSearch

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  pyproject.toml
src/: database.py  main.py  managers.py  parser.py  repository.py  service.py  settings.py  sql_query.py  utils.py
