[tool.poetry]
name = "xmlparser"
version = "0.1.0"
description = ""
authors = ["Matvey <matvei.sergin04@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
elasticsearch = "^8.15.1"
aiohttp = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
